fix : 트리거 구성 넘치는거 overflow수정

--- a/client/src/components/Triggers/Triggers.module.css
+++ b/client/src/components/Triggers/Triggers.module.css
@@ -7,6 +7,7 @@
   background-color: white;
   height: 668px;
   border-radius: 10px;
+  overflow-y: auto;
 }
 
 .explain {
